--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ loom_version=1.14-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.ducky.chatlog
-archives_base_name=chat-logger
+maven_group=com.duckyduck246.chestforensics
+archives_base_name=chest-forensics
 
 # Dependencies
 fabric_api_version=0.141.1+1.21.11
